<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformatikaActivity">

    <Button
        android:id="@+id/sixteento8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="416dp"
        android:backgroundTint="@color/red"
        android:onClick="onClick16to8"
        android:text="@string/sixteento8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sixteento2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/red"
        android:onClick="onClick16to2"
        android:text="@string/sixteento2"
        app:layout_constraintEnd_toStartOf="@+id/tento16"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sixteento10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/red"
        android:onClick="onClick16to10"
        android:text="@string/sixteento10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eightto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="340dp"
        android:backgroundTint="@color/red"
        android:onClick="onClick8to2"
        android:text="@string/eightto2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eightto16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/red"
        android:onClick="onClick8to16"
        android:text="@string/eightto16"
        app:layout_constraintEnd_toStartOf="@+id/tento16"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eightto10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/red"
        android:onClick="onClick8to10"
        android:text="@string/eightto10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/twoto10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="256dp"
        android:backgroundTint="@color/red"
        android:onClick="onClicktwoto10"
        android:text="@string/twoto10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/twoto8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/red"
        android:onClick="onClicktwoto8"
        android:text="@string/twoto8"
        app:layout_constraintEnd_toStartOf="@+id/tento16"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/twoto16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/red"
        android:onClick="onClicktwoto16"
        android:text="@string/twoto16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tento2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/red"
        android:onClick="onClicktento2"
        android:text="@string/tento2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="352dp"
        android:layout_marginBottom="664dp"
        android:contentDescription="@string/app_name"
        android:onClick="onclickbackinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <Button
        android:id="@+id/tento8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/red"
        android:onClick="onClicktento8"
        android:text="@string/tento8"
        app:layout_constraintEnd_toStartOf="@+id/tento16"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tento16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/red"
        android:onClick="onClicktento16"
        android:text="@string/tento16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resinfo"
        android:layout_width="411dp"
        android:layout_height="271dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Numberinfo"
        android:layout_width="335dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>