<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepeniActivity">

  <ImageButton
      android:id="@+id/back2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="428dp"
      android:contentDescription="@string/app_name"
      android:onClick="onclickback"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@android:drawable/ic_media_rew" />

  <EditText
      android:id="@+id/firstnum"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="664dp"
      android:ems="10"
      android:inputType="number"
      android:hint="@string/step"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/secondnum"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:hint="@string/step1"
      android:layout_marginBottom="596dp"
      android:ems="10"
      android:inputType="number"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/res"
      android:layout_width="377dp"
      android:layout_height="110dp"
      android:layout_marginStart="10dp"
      android:layout_marginBottom="307dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/find"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="160dp"
      android:layout_marginBottom="492dp"
      android:text="@string/find"
      android:onClick="findstepen"
      android:textColor="@color/red"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>