<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathActivity">

    <Button
        android:id="@+id/factorial"
        android:layout_width="148dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="550dp"
        android:text="@string/fact"
        android:onClick="onClickFact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stepen"
        android:layout_width="155dp"
        android:layout_height="57dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="550dp"
        android:onClick="onClickstep"
        android:text="@string/step2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="452dp"
        android:contentDescription="@string/app_name"
        android:onClick="onclickback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_rew" />

</androidx.constraintlayout.widget.ConstraintLayout>