<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chemistr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/inforamika"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18sp"
        android:layout_marginTop="110sp"
        android:layout_marginEnd="17sp"
        android:layout_marginBottom="8sp"
        android:onClick="InfoClick"
        android:text="@string/info"
        app:layout_constraintBottom_toTopOf="@+id/chemistry"
        app:layout_constraintEnd_toStartOf="@+id/inforamika2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inforamika2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="12dp"
        android:onClick="mathclick"
        android:text="@string/math"
        app:layout_constraintBottom_toTopOf="@+id/inforamika3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inforamika"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inforamika3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="543dp"
        android:onClick="PhysClick"
        android:text="ФИЗИКА"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chemistry"
        app:layout_constraintTop_toBottomOf="@+id/inforamika2" />

    <Button
        android:id="@+id/inforamika4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="441dp"
        android:onClick="Prikoli"
        android:text="ПРИКОЛЫ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chemistry"
        app:layout_constraintStart_toStartOf="@+id/inforamika"
        app:layout_constraintTop_toBottomOf="@+id/chemistry" />

    <Button
        android:id="@+id/chemistry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="8dp"
        android:onClick="chimclick"
        android:text="@string/chim"
        app:layout_constraintBottom_toTopOf="@+id/inforamika4"
        app:layout_constraintEnd_toStartOf="@+id/inforamika3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inforamika" />


</androidx.constraintlayout.widget.ConstraintLayout>